backend api: bot info ui packages feld removed
